--- a/prelude.less
+++ b/prelude.less
@@ -91,9 +91,17 @@ img {
   }
 }
 
+.multiline {
+  display: flex;
+  flex-wrap: wrap;
+  > * {
+    flex-shrink: 0;
+  }
+}
+
 .equal {
   > * {
-    flex: 1;
+    flex-grow: 1;
   }
 }
 
