--- a/prelude.less
+++ b/prelude.less
@@ -99,6 +99,15 @@ img {
   }
 }
 
+.multiline.gutters-ver {
+  padding-top: @gutter-ver / 2;
+  padding-bottom: @gutter-ver / 2;
+  > * {
+    margin-top: @gutter-ver / 2;
+    margin-bottom: @gutter-ver / 2;
+  }
+}
+
 .equal {
   > * {
     flex-grow: 1;
