--- a/prefixed-prelude.css
+++ b/prefixed-prelude.css
@@ -307,6 +307,12 @@ img {
       -ms-flex: 1;
           flex: 1;
 }
+.multiline.equal > * {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
 .cross-center {
   -webkit-box-align: center;
   -webkit-align-items: center;
